@@ -1,8 +1,10 @@
-CHANGES.txt - 2010-12-01
+CHANGES.txt - 2010-12-22
 ------------------------
 
 CHANGES IN CUPS V1.5b1
 
+	- Added a new cups-exec helper program that applies security profiles
+	  to filters, port monitors, backends, CGI programs, and mini-daemons.
 	- The web interface can now be disabled using the WebInterface directive
 	  in cupsd.conf (STR #2625)
 	- The scheduler now provides privacy controls for jobs and subscriptions
